--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
-    "parcel": "1.11.0"
+    "parcel": "^1.11.0"
   },
   "scripts": {
     "start": "parcel index.html -p 7171",
